# ur5_moveit_test

20191009ur5test5/devel/: .catkin  .rosinstall  local_setup.sh
20191009ur5test5/devel/include/main_node/: MsgTutorial.h
20191009ur5test5/devel/include/main_node3/: MsgTutorial.h  Tracker.h  blocks_poses.h
20191009ur5test5/devel/lib/main_node3/: blocks_spawner  main_88  main_node  main_node3  tf_receive  topic_publisher
20191009ur5test5/devel/lib/pkgconfig/: main_node.pc  main_node2.pc  main_node3.pc  own_controller.pc  ur5_moveit_config.pc  ur_description.pc  ur_gazebo.pc
20191009ur5test5/devel/lib/python2.7/dist-packages/main_node/msg/: _MsgTutorial.py
20191009ur5test5/devel/lib/python2.7/dist-packages/main_node3/msg/: _MsgTutorial.py  _Tracker.py  __init__.py  _blocks_poses.py
20191009ur5test5/devel/share/common-lisp/ros/main_node/msg/: MsgTutorial.lisp  _package.lisp  _package_MsgTutorial.lisp  main_node-msg.asd
20191009ur5test5/devel/share/common-lisp/ros/main_node3/msg/: MsgTutorial.lisp  Tracker.lisp  _package.lisp  _package_MsgTutorial.lisp  _package_Tracker.lisp  _package_blocks_poses.lisp  blocks_poses.lisp  main_node3-msg.asd
20191009ur5test5/devel/share/gennodejs/ros/main_node/msg/: MsgTutorial.js
20191009ur5test5/devel/share/gennodejs/ros/main_node3/msg/: MsgTutorial.js  Tracker.js  _index.js  blocks_poses.js
20191009ur5test5/devel/share/main_node/cmake/: main_node-msg-paths.cmake  main_nodeConfig.cmake
20191009ur5test5/devel/share/main_node2/cmake/: main_node2Config.cmake
20191009ur5test5/devel/share/main_node3/cmake/: main_node3-msg-paths.cmake  main_node3Config.cmake
20191009ur5test5/devel/share/own_controller/cmake/: own_controllerConfig.cmake
20191009ur5test5/devel/share/roseus/ros/main_node/: manifest.l
20191009ur5test5/devel/share/roseus/ros/main_node/msg/: MsgTutorial.l
20191009ur5test5/devel/share/roseus/ros/main_node3/: manifest.l
20191009ur5test5/devel/share/roseus/ros/main_node3/msg/: MsgTutorial.l  Tracker.l  blocks_poses.l
20191009ur5test5/devel/share/ur5_moveit_config/cmake/: ur5_moveit_configConfig.cmake
20191009ur5test5/devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
20191009ur5test5/devel/share/ur_gazebo/cmake/: ur_gazeboConfig.cmake
20191009ur5test5/src/main_node/: CMakeLists.txt
20191009ur5test5/src/main_node/deep_learning/: model_doyle_type3.h5  model_doyle_type3.json  real_test2.py  traing_data_for_doyle_type3.csv
20191009ur5test5/src/main_node/galil/: x_examples.h  x_gcommand.cpp  x_gmotioncomplete.cpp  x_gread_gwrite.cpp  x_nonblocking.cpp  x_programs.cpp
20191009ur5test5/src/main_node/galil_servo/: galilservo.cpp  galilservo.h
20191009ur5test5/src/main_node/gui/: glgragh.cpp  glgragh.h  test_gui.cpp  test_gui.h  test_gui.ui
20191009ur5test5/src/main_node/kinematics/: solvekinematics.cpp  solvekinematics.h
20191009ur5test5/src/main_node/ros_connect/: qnode.cpp  qnode.h  rosconnect.cpp  rosconnect.h  simnode.cpp  simnode.h
20191009ur5test5/src/main_node/src/: joy_receive.cpp  main.cpp  topic_publisher.cpp  topic_subscriber.cpp
20191009ur5test5/src/main_node/vars/: cglobal.cpp  cglobal.h
20191009ur5test5/src/main_node3/: CMakeLists.txt
20191009ur5test5/src/main_node3/env/: blocks_spawner.cpp
20191009ur5test5/src/main_node3/gui/: form.cpp  form.h  form.ui
20191009ur5test5/src/main_node3/launch/: initialize.launch
20191009ur5test5/src/main_node3/msg/: MsgTutorial.msg  Tracker.msg
20191009ur5test5/src/main_node3/ros_connect/: qnode.cpp  qnode.h  simnode.cpp  simnode.h  tf_node.cpp  tf_node.h
20191009ur5test5/src/main_node3/script/: ur5_vision.py
20191009ur5test5/src/main_node3/src/: main_node.cpp  qnode_receive.cpp  tf_receive.cpp
20191009ur5test5/src/main_node3/vars/: cglobal.cpp  cglobal.h
20191009ur5test5/src/own_controller/: CMakeLists.txt
20191009ur5test5/src/own_controller/launch/: testcontroller.launch  testcontroller_gazebo.launch
20191009ur5test5/src/own_controller/src/: testmain.cpp  testmain2.cpp
20191009ur5test5/src/ur_gazebo/launch/: ur5.launch
